--- a/index.html
+++ b/index.html
@@ -24,10 +24,15 @@
       <div class="row my-5">
         <div class="col-12">
           <label for="cantidadcartas" class="fw-bold">Original:</label>
-          <input type="text" id="cantidadcartas" />
-          <button id="robarcartas">draw</button>
-          <button id="ordenarcartas">Sort</button>
-          <div class="mt-5" id="cardcontainer"></div>
+          <input
+            type="text"
+            id="cantidadcartas"
+            class="me-2"
+            placeholder="Cantidad (1-52)"
+          />
+          <button id="robarcartas" class="btn btn-primary me-2">Draw</button>
+          <button id="ordenarcartas" class="btn btn-success">Sort</button>
+          <div class="mt-5" id="cardcontainer" class="card-grid"></div>
         </div>
       </div>
       <div class="row">
